--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -14,3 +14,23 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<body>
+
+    <script type="module">
+        //create elements
+        const div = document.createElement('div');
+        const root = document.createElement('div');
+
+        //set element properties
+        root.id = 'root';
+        div.textContent = 'Hello World';
+        div.className = 'container';
+        
+        //insert elements in DOM
+        document.body.appendChild(root);
+        document.getElementById('root').appendChild(div);
+
+    </script>
+    
+</body>
