--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -4,22 +4,35 @@
 <body>
   <div id="root"></div>
 
-  <!-- 💣 remove this line
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
-  💣 remove this line -->
 
   <script type="module">
     const rootElement = document.getElementById('root')
 
+    const elemOneProps = {
+      className: 'container',
+      children: 'Hello'
+    }
+    const elemOneType = 'span'
+    const reactElementOne = React.createElement(elemOneType, elemOneProps)
+
+    const elemTwoProps = {
+      className: 'container',
+      children: 'World'
+    }
+    const elemTwoType = 'span'
+    const reactElementTwo = React.createElement(elemTwoType, elemTwoProps)
+
+    ReactDOM.render([reactElementOne,reactElementTwo], rootElement)
     // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
     // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
+    //const element = document.createElement('div')
+   //element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
+    //element.className = 'container' // 💰 in React, this is also called the "className" prop
     // This is similar to ReactDOM.render
-    rootElement.append(element)
+    //rootElement.append(element)
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
